[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://prefab/ui/main_menu/option_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefab/ui/main_menu/new_game_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefab/ui/main_menu/exit_game_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefab/ui/main_menu/fade_in.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/main_menu/icon.png" type="Texture" id=6]

[node name="MainMenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 784.0
margin_bottom = 64.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="ButtonList" type="VBoxContainer" parent="Menu"]
margin_top = 68.0
margin_right = 784.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="NewGameButton" parent="Menu/ButtonList" instance=ExtResource( 3 )]

[node name="OptionButton" parent="Menu/ButtonList" instance=ExtResource( 2 )]
margin_top = 30.0
margin_bottom = 50.0

[node name="ExitGameButton" parent="Menu/ButtonList" instance=ExtResource( 4 )]
margin_top = 60.0
margin_bottom = 80.0

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 256.0
margin_right = 784.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Version 0.0.1-poc"
align = 1
valign = 1

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="Menu/ButtonList/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/ButtonList/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="Menu/ButtonList/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
